# madrox

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  ADR-001-Terminal-Reflow-Architecture.md  ARTIFACT_COLLECTION_DESIGN.md  BUG_FIXES.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODEX_QUICK_SETUP.md  CONTRIBUTING.md  DEPENDENCY_SETUP.md  Dockerfile  IMPLEMENTATION_ROADMAP.md  INTEGRATION_GUIDE.md  LICENSE  LIVE_TEST_RESULTS.md  MADROX_TEAM_COMPLETION.md  MCP_CONFIG_FIX_SUMMARY.md  MCP_SETUP.md  PASTE_DETECTION_ANALYSIS.md  PHASE1_DELIVERY_SUMMARY.md  QA_TEST_PLAN_ENABLE_MADROX_REMOVAL.md  QUICK_START.md  README.md  STDIO_MCP_SETUP.md  SUPERVISION_OVERVIEW.md  claude_mcp_config.json  debug_network_test.py  debug_summary.md  demo_quick_attach.py  demo_simple.py  demo_supervision.py  docker-compose.yml  example_supervisor_usage.py  haiku.txt  madrox-mcp  pyproject.toml  (+15 more)
.claude-plugin/: plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude-code-review.yml  claude.yml  lint.yml  test.yml
config/: models.yaml
docker/: README.md  entrypoint.sh
docs/: AGENT_COMMUNICATION_DESIGN.md  AGENT_MONITORING_PLAN.md  API_ENDPOINTS.md  API_REFERENCE.md  ARCHITECTURE.md  ARTIFACTS_CONFIGURATION.md  ARTIFACTS_FEATURE.md  ARTIFACTS_MCP_TOOLS.md  ARTIFACTS_METADATA.md  ARTIFACTS_QUICK_START.md  AUTONOMOUS_SUPERVISION_DESIGN.md  BIDIRECTIONAL_TESTING_RESULTS.md  DESIGN.md  DEVELOPER_GUIDE_MCP_TOOLS.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  INSTANCE_ID_CONFUSION_FIX_2025_10_16.md  INTERRUPT_FEATURE.md  IPC_IMPLEMENTATION_GUIDE.md  MCP_SERVERS_JSON_STRING.md  PARENT_INSTANCE_ID_AUTO_INJECTION.md  PARENT_INSTANCE_ID_AUTO_INJECTION_PLAN.md  PHASE1_IMPLEMENTATION_SUMMARY.md  QUICK_START_LOGGING.md  README.md  SETUP.md  STATUSLINE_ISOLATION.md  STDIO_TRANSPORT.md  STRESS_TESTING.md  SUPERVISION_NETWORK.md  TEMPLATES.md  TROUBLESHOOTING.md  log-streaming.md
docs/architecture/: llm_summarizer_architecture.md
docs/archive/: ARTIFACT_COLLECTION_DESIGN.md  BIDIRECTIONAL_MESSAGING_DESIGN.md  CODEX_MCP_SOLUTION.md  CODEX_QUICK_SETUP.md  DEBUGGING.md  FINDINGS.md  IPC_FIXES_2025_10_16.md  LOGGING.md  MCP_CONFIG_FIX_SUMMARY.md  MCP_SERVER_CONFIGURATION.md  MCP_SETUP.md  NON_BLOCKING_NETWORK_SPAWN.md  PASTE_DETECTION_ANALYSIS.md  QUICK_START.md  README.md  TEST_FAILURE_ANALYSIS.md  TMUX_PASTE_BUFFER_RESEARCH.md  TOOL_DISCOVERY_BUG.md  cli_event_parsing_implementation.md
docs/supervision/: API_REFERENCE.md  DEPENDENCY_SETUP.md  INTEGRATION_GUIDE.md
examples/: README.md  debug_network_test.py  demo_live_network.py  demo_log_streaming.py  demo_simple.py  demo_supervision.py  demo_supervision_quick.py  demo_weather_chat.py  playwright_spawn.py  playwright_web_scraper.py  quickstart_3_agents.py  spawn_with_json_mcp_servers.py  spawn_with_mcp_configs.py  supervision_integration_example.py
frontend/: DUAL_PANEL_LOGS.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: agent-node.tsx  animated-background.tsx  animated-message-edge.tsx  audit-log.tsx  connection-status.tsx  dual-panel-logs.tsx  filter-bar.tsx  log-entry.tsx  log-filters.tsx  log-list.tsx  log-panel.tsx  network-graph.tsx  stats-header.tsx  terminal-viewer.tsx  theme-toggle.tsx
frontend/hooks/: use-log-websocket.ts  use-websocket.ts
frontend/lib/: utils.ts
frontend/store/: instance-store.ts  log-store.ts
frontend/types/: index.ts  terminal.ts
resources/mcp_configs/: README.md  brave-search.json  codex-config.toml  filesystem.json  github.json  google-drive.json  memory.json  playwright.json  postgres.json  puppeteer.json  slack.json  sqlite.json
resources/prompts/: README.md  architect.txt  backend_developer.txt  code_reviewer.txt  data_analyst.txt  debugger.txt  documentation_writer.txt  frontend_developer.txt  general.txt  security_analyst.txt  testing_specialist.txt
scripts/: check_instance_activity.sh  monitor_dashboard.py  proc_lifecycle.sh
scripts/tests/: run_tests.sh  test_auto_detection.sh  test_concurrent_transports.sh
skills/dashboard/: SKILL.md
src/orchestrator/: __init__.py  compat.py  config.py  instance_manager.py  llm_summarizer.py  log_stream_handler.py  logging_manager.py  mcp_adapter.py  mcp_loader.py  mcp_server.py  models.py  models.py.deprecated  monitoring_service.py  name_generator.py  pty_instance.py  server.py  shared_state_manager.py  simple_models.py  state_store.py  stdio_server.py  tmux_instance_manager.py  usage_tracker.py
src/supervision/: __init__.py
templates/: data_pipeline_team.md  research_analysis_team.md  security_audit_team.md  software_engineering_team.md
tests/: conftest.py  integration_demo.py  simple_bidirectional_test.py  test_artifacts.py  test_bidirectional_messaging.py  test_cli_event_parsing.py  test_codex_mcp_config.py  test_compat.py  test_integration_verification.py  test_llm_summarizer.py  test_log_streaming.py  test_mcp_configuration.py  test_mcp_loader.py  test_mcp_servers_json_string.py  test_mcp_stdio_config.py  test_mcp_tools_integration.py  test_monitoring_service.py  test_network_bidirectional.py  test_orchestrator.py  test_parent_instance_id_enforcement.py  test_proc_lifecycle.py  test_security_fixes.py  test_stdio_mcp_server.py  test_supervisor_live.py  test_tool_registration.py
tests/docker/: test_container.sh
tests/integration/: test_mcp_adapter.py  test_plugin_lifecycle.py  test_server.py
tests/monitoring/: __init__.py  conftest.py  test_llm_summarizer_unit.py  test_log_reader.py  test_models.py  test_position_tracker.py  test_summary_generator.py
tests/supervision/: test_analysis_analyzer.py  test_analysis_models.py  test_events_bus.py  test_events_models.py  test_integration.py  test_supervisor_integration.py  test_tracking_models.py  test_tracking_tracker.py
tests/unit/: test_compat.py  test_config.py  test_instance_manager.py  test_instance_manager_comprehensive.py  test_instance_manager_main_inbox.py  test_logging_manager.py  test_mcp_adapter_additional.py  (+12 more)
(+44 files in other folders)
