[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supervision", "src/orchestrator"]

[project]
name = "claude-orchestrator-mcp"
version = "0.1.0"
description = "Claude Conversational Orchestrator MCP Server - Enable Claude to spawn and manage multiple Claude instances"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Nadav Barkai" }
]
license = "MIT"
keywords = ["mcp", "claude", "orchestrator", "ai", "agents", "llm", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "anthropic>=0.8.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.15.0",
    "mcp-python>=0.1.4",
    "aiohttp>=3.12.15",
    "sse-starlette>=3.0.2",
    "libtmux>=0.46.2",
    "psutil>=7.1.0",
    "toml>=0.10.2",
    "fastmcp>=2.12.4",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
claude-orchestrator = "src.orchestrator.server:main"

[project.urls]
Homepage = "https://github.com/nadavbarkai/madrox"
Repository = "https://github.com/nadavbarkai/madrox"
Documentation = "https://github.com/nadavbarkai/madrox/tree/main/docs"
Issues = "https://github.com/nadavbarkai/madrox/issues"
Changelog = "https://github.com/nadavbarkai/madrox/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --strict-markers"
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function call in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"src/orchestrator/compat.py" = [
    "UP036",  # Version block can be removed when dropping Python <3.11 support
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
warn_return_any = false
check_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "orchestrator.mcp_adapter"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestrator.shared_state_manager"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestrator.config"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestrator.monitoring_service"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestrator.log_stream_handler"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestrator.tmux_instance_manager"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestrator.instance_manager"
ignore_errors = true

[[tool.mypy.overrides]]
module = "supervision.coordination.coordinator"
ignore_errors = true

[[tool.mypy.overrides]]
module = "supervision.supervisor.agent"
ignore_errors = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]
